--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
             </div>
             <div><button class="btn-contact">Contact Me</button></div>
         </div>
-        <img src="D:\xampp\xampp\htdocs\project\homepage\CV_photo.JPG" alt="Photo" class="cv-photo">
+        <img src="CV_photo.JPG" alt="Photo" class="cv-photo">
         
     </div>
 
